// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Description descriptionが空の場合、空で表示されること 1`] = `
<div>
  <h3
    className="sr-only"
  >
    Description
  </h3>
  <div
    className="space-y-6"
  >
    <p
      className="text-base text-gray-900"
    />
  </div>
</div>
`;

exports[`Description descriptionに文字列が設定されている場合、それを元に表示されること 1`] = `
<div>
  <h3
    className="sr-only"
  >
    Description
  </h3>
  <div
    className="space-y-6"
  >
    <p
      className="text-base text-gray-900"
    >
      あひるのフィギュアです。お風呂に浮かべて楽しいひと時。
    </p>
  </div>
</div>
`;
